# doc-extractor-core

./: app.py  main.py  pyproject.toml  run_backend.py  run_frontend.py
backend/: .gitignore  pyproject.toml
backend/app/core/: config.py
data/: layout_casamento.csv  layout_nascimento.csv  layout_obito.csv
src/: config.py
src/backend/: main.py
