[project]
name = "doc-extractor-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.120.1",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
]
